(lang dune 3.4)

(name WaveFunctionCollapse)

(generate_opam_files true)

(source
 (github wojpok/WaveFunctionCollapse))

(authors "Woj Pok")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://hackmd.io/tKDH0bNGTH-vkeymuzAsOw)

(package
 (name WaveFunctionCollapse)
 (synopsis "WaveFunctionCollapse")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
